# Waterfront

./: .aider.chat.history.md  .aider.input.history  .gitignore  Diff summary for `main.cpp  Happy building!  Payload: {"alert":"low_power","batteryPercent":15,"solarVoltage":2.5,"timestamp":1234567890}  Payload: {"compartmentId":1,"action":"gate_opened","timestamp":1234567890,"crc":987654321}  Payload: {"uptime":3600,"heapFree":204800,"fwVersion":"0.9.2-beta","batteryPercent":85,"tasks":5,"reconnects":2}  README.md  STYLE_GUIDE.md  TSD.md  Technical Specification Document (TSD).md  test-aider-github.txt  vercel.json  }
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
docs/: ESP32 Pinout Plan and Diagram.md  ESP32 Project Plan - Waterfront Firmware Code Development.md  FSD.md  HARDWARE_BASELINE.md  MQTT_SPEC.md  MQTT_SPEC.md.md  TSD.md
src/: config.h  mqtt_base.cpp  nimble.cpp  nimble.h  webui_server.cpp  webui_server.h
waterfront-backend/: .env.example  index.js
waterfront-esp32/: CONVENTIONS.md  README.md  platformio.ini
waterfront-esp32/data/: config.json
waterfront-esp32/docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  ESP32 Pinout Plan and Diagram.md  MQTT_SPEC.md.md  SYSTEM_SPEC.md  TROUBLESHOOTING.md  ToDo-ESP32-Firmware.md
waterfront-esp32/main/: CMakeLists.txt  mqtt_client.cpp  nimble.cpp  offline_fallback.cpp  offline_fallback.h
waterfront-infra/: .gitignore  docker-compose.yml  mosquitto.conf
waterfront-web/: .gitignore  create-table.sql  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
workflows/: lint-docs.yml
(+65 files in other folders)
